# Linode-MCP-Server

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: INSTALL.md
src/: __init__.py  linode_client.py  server.py
src/tools/: __init__.py  cost_calculator.py  idle_detector.py  ip_auditor.py  region_stats.py  tag_manager.py
src/utils/: pricing.py
tests/: test_tools.py
